<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sogifty</string>
    <string name="action_settings">Settings</string>
    <string name="menu_list_delete">Supprimer</string>
    <string name="menu_list_add">Ajouter</string>
    <string name="menu_modify">Modifier</string>
    <string name="menu_delete_ok">OK</string>
    <string name="menu_modify_ok">OK</string>
    
    <string name="deleteModeBtnTrue">OK</string>
    <string name="deleteModeBtnFalse">Supprimer</string>
    
    <string name="nameFriend">Nom</string>
    <string name="surnameFriend">Prénom</string>
    <string name="tagsFriend">Goûts</string>
    
    <string name="empty_string">No String</string>
    
  	<string name="connection_et_email">Entrer votre adresse mail</string>
    <string name="connection_et_password">Entrer votre mot de passe</string>  
  	<string name="connection_b_connection">Se connecter</string>
  	<string name="connection_b_subscription">S\'inscrire</string>
  	
  	<string name="friendlist_no_friend">Pas d\'amis, ajoutez-en! </string>  
  	
  	
  	<string name="frienddetail_tv_nameFriend">Nom : </string>  
  	<string name="frienddetail_tv_firstnameFriend">Prénom : </string>  
  	<string name="frienddetail_tv_RemainingDate">J-</string> 
  	<string name="frienddetail_tv_age">Age : </string> 
  	<string name="frienddetails_tv_tags">Goûts : </string>
  	<string name="frienddetails_actv_tags">Entrer un goût </string>
  	<string name="frienddetails_no_taste">Modifiez les goûts de votre ami pour obtenir des suggestions</string>
  	
  	<string name="modify_tv_name">Nom : </string>  
  	<string name="modify_tv_firstname">Prénom : </string>  
  	<string name="modify_tv_birthdaydate">Date d\'anniversaire : </string> 
    <string name="modify_tv_function">Fonction : </string>
    <string name="modify_tv_tags">Goûts : </string>
    <string name="modify_b_addtag">Ajouter</string>
    <string name="modify_b_avatar">Modifier avatar</string>
    <string name="modify_actv_tags">Entrer un goût </string>
    <string name="modify_h_name">Entrer le nom. </string>
  	<string name="modify_h_function">Entrer la fonction </string>
  	<string name="modify_h_firstname">Entrer le prenom</string>  
  	<string name="modify_h_birthdaydate">JJ-MM-AAAA</string> 
  	
  	<string name="web_url_init">http://sogifty-env-kvaj6nfpcm.elasticbeanstalk.com/api/</string>
  	<string name="inscription_et_email">Entrer votre adresse mail</string>
    <string name="inscription_et_password">Entrer votre mot de passe</string>
    <string name="inscription_et_confirmation">Confirmer votre mot de passe</string>
    <string name="inscription_b_inscription">Inscription</string>
    <string name="inscription_iv_logo">Logo</string>
    
    
    <string name="no_network_connection_error">Vérifiez votre connexion</string>
    <string name="unknown_error">Erreur inconnue</string>
  	<string name="internal_error">Erreur serveur</string>
  	<string name="http_error">Impossible de se connecter à l\'URL</string>
  	<string name="user_already_exists">L\'utilisateur existe déjà</string>
  	<string name="create_user_error">Erreur de création de l\'utilisateur</string>
  	<string name="user_passwd_no_correspond"> L\'utilisateur et le mot de passe ne correspondent pas </string>
  	
  	
  	<string name="giftPager_tv_description">Description :</string>
  	<string name="giftPager_tv_title">Nom du Cadeau</string>
  	<string name="giftPager_tv_price">Prix du Cadeau</string>
  	
  	<string name="add_friend_et_name">Nom</string>
  	<string name="add_friend_et_birthdate">Date d\'anniversaire jj-mm-aaaa</string>
  	<string name="add_friend_b_add">Ajouter</string>
  	
  		
  	<string name="useritem_iv_user_description">Avatar for the user</string>
  	<string name="useritem_iv_gift_description">Gift proposed</string>
	<string name="useritem_tv_price">gift price</string>
  	<string name="useritem_tv_age">Age: </string>
  	<string name="useritem_tv_birthday">Anniversaire: </string>
  	
  	<string name="gift_pager_iv_gift_description">One of the gift proposed</string>		
  	
  	<string name="activity_friend_details_iv_friend_avatar">Avatar for the user</string>
  	
  	<string name="chooseavatar_tv_title">Choisis ton avatar</string>
  	
</resources>