<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/modify_iv_avatar"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:src="@drawable/noavatar" />

            <TextView
                android:id="@+id/modify_tv_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify_tv_firstname" />

            <EditText
                android:id="@+id/modify_et_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/modify_h_firstname" />

            <TextView
                android:id="@+id/modify_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify_tv_name" />

            <EditText
                android:id="@+id/modify_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/modify_h_name" />

            <TextView
                android:id="@+id/modify_tv_birthdaydate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify_tv_birthdaydate" />

            <EditText
                android:id="@+id/modify_et_birthdaydate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/modify_h_birthdaydate"
                android:inputType="date" />

            <TextView
                android:id="@+id/modify_tv_function"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify_tv_function" />

            <EditText
                android:id="@+id/modify_et_function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/modify_h_function" />
        </LinearLayout>

        <TextView
            android:id="@+id/modify_tv_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frienddetails_tv_tags"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <AutoCompleteTextView
                android:id="@+id/modify_actv_edittags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/modify_actv_tags"
                android:textColor="@color/blue" />

            <Button
                android:id="@+id/modify_b_addtag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify_b_addtag" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/modify_l_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2" >

            <LinearLayout
                android:id="@+id/modify_l_ltags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/modify_l_rtags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>