<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >
    
    <ImageView
        android:id="@+id/ivDetail"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:src="@drawable/sogifti_logo" />
    
    <EditText 
        android:id="@+id/connection_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/connection_et_email"/>
   
    <EditText 
        android:id="@+id/connection_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/connection_et_password"/>
    
    <Button 
        android:id="@+id/connection_b_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_b_connection"/>
    <Button 
        android:id="@+id/connection_b_subscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_b_subscription"/>
    
    </LinearLayout>
