<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
     <EditText
        android:id="@+id/add_friend_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_friend_et_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/add_friend_et_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_friend_et_birthdate"
        android:inputType="text" />

   <Button
        android:id="@+id/add_friend_b_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_friend_b_add" />
    
</LinearLayout>    