<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/giftPager_sv_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/giftPager_l_giftpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/giftPager_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/giftPager_tv_title"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/giftPager_tv_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/giftPager_tv_price"
            android:textColor="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" >

             <ImageView
                android:layout_width="40dp"
           		android:layout_height="match_parent"
           		android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:src="@drawable/left_arrown" />

            <ImageView
                android:id="@+id/giftitem_iv_gift"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/gift_pager_iv_gift_description"
                android:scaleType="fitCenter"
                android:src="@drawable/cadeau" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:src="@drawable/red_arrown" />
        </LinearLayout>

        <TextView
            android:id="@+id/giftPager_tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/giftPager_tv_description" />
    </LinearLayout>

</ScrollView>